--- a/code/04-18_elasticnet_partial.qmd
+++ b/code/04-18_elasticnet_partial.qmd
@@ -246,11 +246,15 @@ Now, let's create a **grid** to perform our hyperparameter tuninig search with m
 
 ```{r enet_grid}
 enet_grid <- crossing(penalty = seq(0, 
-                                    100, 
-                                    by = 10),
+                                    1, 
+                                    by = 0.05),
                       mixture = seq(0, 
                                     1, 
                                     by = 0.2))
+enet_grid <- grid_regular(penalty(),
+                          mixture(),
+                          levels = list(penalty = 50,
+                                        mixture = 10))
 
 enet_grid
 ```
@@ -366,7 +370,8 @@ Let's use the hyperparameter values that optimized R2 to fit our final model.
 ```{r final_spec}
 final_spec <- linear_reg(penalty = best_r2$penalty,
                          mixture= best_r2$mixture
-                         )
+                         ) %>%
+  set_engine("glmnet")
 
 final_spec
 ```
